# fetchy

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs  render.rs  theme.rs
src/info/: battery.rs  display.rs  env.rs  gpu.rs  hardware.rs  mod.rs  network.rs  os.rs  packages.rs
src/logos/: mod.rs
src/tui/: draw.rs  mod.rs  print.rs
