[package]
name = "fetchy"
version = "1.0.0"
edition = "2021"
authors = ["samujal"]
description = "A fast, friendly system info tool for your terminal"
license = "MIT"
repository = "https://github.com/Samujalphukan228/fetchy"
readme = "README.md"
keywords = ["system", "info", "fetch", "terminal", "linux"]
categories = ["command-line-utilities"]

[[bin]]
name = "systeminfo"
path = "src/main.rs"

[dependencies]
sysinfo = "0.32"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0.0"
log = "0.4"
env_logger = "0.11"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"